# Visualization_Vignettes

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-latest.json
.github/workflows/: main.yml
In_Situ_Vignettes/: README.md
Miniapps/gray-scott/: CMakeLists.txt  README.md
Miniapps/gray-scott/analysis/: CMakeLists.txt  README.md  adios_reader.cpp  adios_reader.h  analysis_backend_interface.h  analysis_backends.h  ascent_backend.cpp  ascent_backend.h  backend_factory.cpp  catalyst_backend.cpp  catalyst_backend.h  main.cpp
Miniapps/gray-scott/common/: perf_logger.cpp  perf_logger.hpp
Miniapps/gray-scott/configs/: cleanupRun.sh
Miniapps/gray-scott/configs/adios2_configs/: adios2.xml
Miniapps/gray-scott/configs/ascent_scripts/: ascent-extract-png.yaml  ascent-multi-pipeline.yaml  ascent-save-data.yaml  ascent-slice-iso-png.yaml  ascent_options.yaml
Miniapps/gray-scott/configs/catalyst_scripts/: catalyst-extract-contour_v.py  catalyst-extract-jpg.py  catalyst-multi-pipeline.py  catalyst-save-data.py
Miniapps/gray-scott/configs/kombyne_scripts/: kombyne-extract-png.yaml  kombyne-multi-pipeline.yaml  kombyne-save-data.yaml
Miniapps/gray-scott/configs/miniapp-settings/: ibex-settings-catalyst-file-io.json  ibex-settings-catalyst-insitu.json  ibex-settings-vtk-pvti.json  settings-adios-localcopy.json  settings-adios-memselect.json  settings-adios-span.json  settings-ascent.json  settings-catalyst-file-io.json  settings-catalyst-insitu.json  settings-kombyne.json  settings-vtk-pvti.json
Miniapps/gray-scott/scripts/: ascent_parse_timings.py  ascent_timings_plotter.py  cleanupRun.sh  kombyne_timings_plotter.py  visualize-performance-metrics.py
Miniapps/gray-scott/simulation/: gray-scott.cpp  gray-scott.h  main.cpp  restart.cpp  restart.h  settings-files.json  settings.cpp  settings.h  writer.cpp  writer.h  writerADIOS.cpp  writerADIOS.h  writerAscent.cpp  writerAscent.h  writerCatalyst.cpp  writerCatalyst.h  writerKombyne.cpp  writerKombyne.h  writerPVTI.cpp  writerPVTI.h  writerType.h
Miniapps/gray-scott/sites/ibex/: MODULES.sh  run-ibex.sbat
Miniapps/gray-scott/sites/kw61316/: README.md  config.bash
ParaView_Vignettes/: MODULES.sh  README.md  createParaViewMovie.sh  ex00_ibex_runScript.sbat  ex00_pvConeStat.py  ex00_shaheen_runScript.sbat  ex01_ibex_runScript.sbat  ex01_pvScreenshot.py  ex01_shaheen_runScript.sbat  ex02_ibex_runScript.sbat  ex02_pvAnimation.py  ex02_shaheen_runScript.sbat  ex03_ibex_runScript.sbat  ex03_loadDataFromFile.py  ex03_shaheen_runScript.sbat
ParaView_Vignettes/ex00_pvQuery/: ex00_ibex_runScript.sbat  ex00_pvConeStat.py  ex00_shaheen_runScript.sbat
ParaView_Vignettes/ex00_pvQuery/Testing/: performance_metrics_KW61316.kaust.edu.sa.json  performance_metrics_ibex-cpu.json  performance_metrics_ibex-egl-a100.json  performance_metrics_ibex-egl-gtx1080ti.json  performance_metrics_ibex-egl-p100.json  performance_metrics_ibex-egl-p6000.json  performance_metrics_ibex-egl-rtx2080ti.json  performance_metrics_ibex-egl-v100.json  performance_metrics_shaheen3-cpu.json  performance_metrics_shaheen3-mesa-ppn.json  performance_metrics_shaheen3-ppn-gpu-L40.json
ParaView_Vignettes/ex01_pvScreenshot/: ex01_ibex_runScript.sbat  ex01_pvScreenshot.py  ex01_shaheen_runScript.sbat
ParaView_Vignettes/ex01_pvScreenshot/Testing/: performance_metrics_KW61316.kaust.edu.sa.json  performance_metrics_ibex-cpu.json  performance_metrics_ibex-egl-a100.json  performance_metrics_ibex-egl-gtx1080ti.json  performance_metrics_ibex-egl-p100.json  (+6 more)
ParaView_Vignettes/ex02_pvAnimation/: ex02_ibex_runScript.sbat  ex02_pvAnimation.py  ex02_shaheen_runScript.sbat
ParaView_Vignettes/ex03_pvIsosurfaceAnimation/: ex03_ibex_runScript.sbat  ex03_pvIsosurfaceAnimation.py  ex03_shaheen_runScript.sbat
ParaView_Vignettes/ex03_pvLoadDataFromFile/: ex03_ibex_runScript.sbat  ex03_loadDataFromFile.py  ex03_shaheen_runScript.sbat
ParaView_Vignettes/ex04_pvStreamlineAnimation/: ex04_ibex_runScript.sbat  ex04_pvStreamlineAnimation.py  ex04_shaheen_runScript.sbat
ParaView_Vignettes/ex05_pvMultiTimeStepFile/: ex05_ibex_runScript.sbat  ex05_pvMultiTimeStepFile.py  ex05_shaheen_runScript.sbat
ParaView_Vignettes/ex06_pvLargeData/: ex06_ibex_runScript.sbat  ex06_pvLargeData.py  ex06_shaheen_runScript.sbat
Scripts/: README.md  createMovieFromImages.sh
Scripts/docker/: entrypoint.sh  setup_rundir.sh
Testing/: README.md  metrics.py  plot_metrics.py  run_tests.py  test_suite.py
VisIt_Vignettes/: MODULES.sh  README.md  createVisItMovie.sh  ex00_ibex_runScript.sbat  ex00_shaheen_runScript.sbat  ex00_visitQuery.py  ex01_ibex_runScript.sbat  ex01_shaheen_runScript.sbat  ex01_visitScreenshot.py  ex02_ibex_runScript.sbat  ex02_shaheen_runScript.sbat  ex02_visitAnimation.py
VisIt_Vignettes/ex00_visitQuery/: ex00_ibex_runScript.sbat  ex00_shaheen_runScript.sbat  ex00_visitQuery.py
VisIt_Vignettes/ex01_visitScreenshot/: ex01_ibex_runScript.sbat  ex01_shaheen_runScript.sbat  ex01_visitScreenshot.py
VisIt_Vignettes/ex02_visitAnimation/: ex02_ibex_runScript.sbat  ex02_shaheen_runScript.sbat  ex02_visitAnimation.py
VisIt_Vignettes/ex03_visitIsosurfaceAnimation/: ex03_ibex_runScript.sbat  ex03_shaheen_runScript.sbat  ex03_visitIsosurfaceAnimation.py
VisIt_Vignettes/ex04_visitStreamlineAnimation/: ex04_ibex_runScript.sbat  ex04_shaheen_runScript.sbat  ex04_visitStreamlineAnimation.py
VisIt_Vignettes/ex05_visitAdvancedMovieMaking/: ex05_ibex_runScript.sbat  ex05_shaheen_runScript.sbat  ex05_visitAdvancedMovieMaking.py
VisIt_Vignettes/ex05_visitMultiTimeStepFile/: ex05_ibex_runScript.sbat  ex05_shaheen_runScript.sbat  ex05_visitMultiTimeStepFile.py
VisIt_Vignettes/ex06_visitLargeData/: cyclone.session  ex06_ibex_runScript.sbat  ex06_shaheen_runScript.sbat  ex06_visitLargeData.py  visitCyclone.session
VisIt_Vignettes/ex06_visitMultiTimeStepFile/: ex06_ibex_runScript.sbat  ex06_shaheen_runScript.sbat  ex06_visitMultiTimeStepFile.py
data/: fetchData.sh  varying.visit
(+96 files in other folders)
